Navigation bug when body is too short fixed [katheroine#29]

--- a/src/assets/stylesheets/site.violet.css
+++ b/src/assets/stylesheets/site.violet.css
@@ -25,10 +25,12 @@ body
 {
   display: grid;
   grid-template-rows:
-    [header-begin] var(--header-height) [header-end
+    [body-begin
+    header-begin] var(--header-height) [header-end
     dashboard-begin] max-content [dashboard-end
     board-begin] max-content [board-end
-    footer-begin] max-content [footer-end];
+    footer-begin] min-content [footer-end]
+    max-content [body-end];
   grid-template-areas:
     "header"
     "cover"
